fixed success page on mobile. fix focus input on mobile

--- a/src/components/fields/FormField/_form-field.scss
+++ b/src/components/fields/FormField/_form-field.scss
@@ -18,7 +18,7 @@
   line-height: 24px;
 
   @include mobile {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 22px;
   }
 }
