--- a/src/components/fields/SelectField/select-field.scss
+++ b/src/components/fields/SelectField/select-field.scss
@@ -81,10 +81,6 @@
 
     cursor: pointer;
 
-    @include mobile {
-      font-size: 14px;
-    }
-
     &-content {
       display: flex;
       flex-direction: column;
