--- a/src/views/Terminals/terminals.scss
+++ b/src/views/Terminals/terminals.scss
@@ -44,9 +44,13 @@
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
-    line-height: 150%;
 
     color: $accent-primary;
+    text-align: center;
+
+    @include mobile {
+      font-size: 32px;
+    }
   }
 
   &__subtitle {
@@ -72,6 +76,10 @@
     text-align: center;
 
     color: $dark-primary;
+
+    @include mobile {
+      max-width: 100%;
+    }
   }
 
   &__link {
